# vlm-perception-experiments

./: .gitignore  CLAUDE.md  LICENSE  README.md  fnox.toml  mise.toml  pyproject.toml
backlog/: config.yml
backlog/tasks/: task-1 - switch-to-jsonl-instead-of-csv.md  task-2 - parallelise-API-calls.md
results/: judgments.jsonl  results.csv  thinking_traces.json
scripts/: capture_thinking_traces.py  option2_analysis.py
src/vlm_perception/: __init__.py  analysis.py  cli.py  evaluate.py  judge.py  models.py  plotting.py  prompts.json  stimuli.py  storage.py
tests/: test_analysis.py  test_evaluate.py  test_models.py  test_stimuli.py  test_storage.py
