[project]
name = "vlm-perception"
version = "0.1.0"
description = "Test whether VLMs can determine occlusion order of crisp vs blurred overlapping circles"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Ben Swift", email = "ben@benswift.me" },
    { name = "Jess Herrington" },
]
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.52",
    "openai>=1.82",
    "pillow>=11",
    "polars>=1.27",
    "pydantic>=2.11",
    "typer>=0.15",
]

[project.scripts]
vlm-perception = "vlm_perception.cli:app"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-xdist>=3",
]
